src/test/ui/suggestions/issue-72766.stderr
error[E0277]: the `?` operator can only be applied to values that implement `std::ops::Try`
  --> $DIR/issue-72766.rs:14:5
   |
LL |     SadGirl {}.call()?;
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     the `?` operator cannot be applied to type `impl std::future::Future`
   |     help: consider using `.await` here: `SadGirl {}.call().await?`
   |
   = help: the trait `std::ops::Try` is not implemented for `impl std::future::Future`
   = note: required by `std::ops::Try::into_result`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
